--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,16 @@
 @import "./utils/variables";
 @import "./utils/placeholders";
+@import "./utils/utils";
+@import "./utils/mixins";
+
 @import "./components/body";
+
 @import "./components/logo";
+@import "./components/button";
+
 @import "./components/header";
 @import "./components/site-nav";
 @import "./components/contacts";
 @import "./components/hero";
+@import "./components/benefits-list";
+@import "./components/do-list";
