--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -7,12 +7,10 @@
 %titel {
     margin-top: 0;
     margin-bottom: 0;
-    color: var(--titel-text-color);
+    color: $titel-text-color;    
 }
-%container {
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 15px;
-    padding-right: 15px;
-    width: 1200px;
+
+%text {
+    margin-top: 0;
+    margin-bottom: 0;
 }
