--- a/sass/utils/_utils.scss
+++ b/sass/utils/_utils.scss
@@ -1,5 +1,30 @@
-
-.section__titel {
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+.section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    width: 1200px;
+}
+.img {
+    display: block;
+}
+.section-titel {
     @extend %titel;
     margin-bottom: 50px;
 
@@ -9,3 +34,5 @@
     letter-spacing: 0.03em;
     text-align: center;
 }
+
+
