--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,5 @@
 @import "./utils/variables";
 @import "./utils/placeholders";
-@import "./utils/utils";
 @import "./utils/mixins";
 
 @import "./components/body";
@@ -14,3 +13,11 @@
 @import "./components/hero";
 @import "./components/benefits-list";
 @import "./components/do-list";
+@import "./components/team-list";
+@import "./components/team-card";
+@import "./components/social-list";
+@import "./components/social-link";
+@import "./components/client-list";
+@import "./components/client-link";
+@import "./components/footer";
+@import "./components/address-list";
