--- a/sass/components/_benefits-list.scss
+++ b/sass/components/_benefits-list.scss
@@ -5,7 +5,7 @@
         width: 270px;
     }
     &__icon-bg {
-        @include centred;
+        @include centredFlex(flex);
         
         max-width: 270px;
         height: 120px;
