--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,8 @@
 
 @import "./components/logo";
 @import "./components/button";
+@import "./components/mailing-form";
+@import "./components/backdrop";
 
 @import "./components/header";
 @import "./components/site-nav";
@@ -21,3 +23,7 @@
 @import "./components/client-link";
 @import "./components/footer";
 @import "./components/address-list";
+@import "./components/modal";
+@import "./components/application-form";
+
+@import "./components/portfolio-filter";
