--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-.address-list, .client-list, .social-list, .team-list, .do-list, .benefits-list, .contacts, .site-nav {
+.filter, .address-list, .client-list, .social-list, .team-list, .do-list, .benefits-list, .contacts, .site-nav {
   list-style: none;
   padding: 0;
   margin: 0;
@@ -10,7 +10,7 @@
   color: #212121;
 }
 
-.team-card__text, .do-list__label, .benefits-list__text {
+.footer__titel, .team-card__text, .do-list__label, .benefits-list__text {
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -97,8 +97,49 @@
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.button:hover, .button:focus {
+.button:hover, .button:focus, .button:active {
   background-color: #188ce8;
+}
+
+.form__input {
+  width: 358px;
+  padding: 15px 16px;
+  color: rgba(255, 255, 255, 0.6);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: inherit;
+}
+.form__button {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 12px;
+  padding: 10px 28px;
+}
+.form__button--icon {
+  margin-left: 10px;
+  width: 24px;
+  height: 24px;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity 300ms linear, visibility 300ms linear;
+}
+.backdrop--hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.backdrop--hidden .modal {
+  transform: translate(-50%, -50%) scale(0) rotate(-90deg);
 }
 
 .header {
@@ -410,6 +451,25 @@
   display: flex;
   align-items: baseline;
 }
+.footer__titel {
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+.footer__social {
+  margin-left: 70px;
+}
+.footer__form {
+  margin-left: auto;
+}
+
+.social-link--bcg {
+  background-color: rgba(255, 255, 255, 0.1);
+}
 
 .address-list__link {
   display: block;
@@ -426,4 +486,221 @@
 }
 .address-list__link:hover, .address-list__link:focus {
   color: #2196f3;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1) rotate(0);
+  width: 528px;
+  min-height: 581px;
+  padding: 40px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transition: transform 300ms linear, scale 350ms linear, rotate 350ms linear;
+}
+
+.close-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50px;
+  background-color: transparent;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: fill cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+}
+.close-btn:hover, .close-btn:focus {
+  fill: #2196f3;
+}
+
+.form-titel {
+  margin-top: 0;
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+
+.form-field {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.form-label {
+  margin-top: 10px;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: #757575;
+}
+
+.form-label[for=nik] {
+  margin-top: 0;
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+  padding-top: 12px;
+  padding-right: 12px;
+  padding-bottom: 12px;
+  padding-left: 30px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  transition: border-color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+}
+
+.form-field .icon-absolute {
+  position: relative;
+  margin-top: 4px;
+}
+
+.modal-form-icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+  width: 18px;
+  height: 18px;
+  transition: fill cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+}
+
+.form-textarea {
+  width: 100%;
+  height: 138px;
+  padding: 12px 16px;
+  margin-top: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  resize: none;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+  transition: border-color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+}
+
+.form-textarea::placeholder {
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.modal-input:focus,
+.form-textarea:focus {
+  outline: none;
+  border-color: #2196f3;
+}
+
+.icon-absolute:focus-within > .modal-form-icon {
+  fill: #2196f3;
+}
+
+.checkbox-field {
+  position: relative;
+  margin-top: 20px;
+  justify-content: center;
+}
+
+.icon-position {
+  position: absolute;
+  top: 50%;
+  left: 11px;
+  transform: translateY(-55%);
+  display: block;
+  width: 16px;
+  height: 15px;
+  border: 2px solid #212121;
+  border-radius: 2px;
+  pointer-events: none;
+  transition: border-color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+}
+
+.checkbox-icon {
+  display: block;
+  width: 100%;
+  height: 100%;
+  fill: #ffffff;
+}
+
+.checkbox:checked + .icon-position {
+  background-color: #2196f3;
+  border: none;
+}
+
+.checkbox:focus + .icon-position {
+  border-color: #2196f3;
+  outline: 1px solid #212121;
+}
+
+.checkbox-text {
+  display: flex;
+  justify-content: center;
+  padding-left: 24px;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+.checkbox-text a {
+  margin-left: 3px;
+  color: #2196f3;
+  text-decoration: none;
+}
+
+.contract .underline {
+  line-height: 0.85;
+  border-bottom: 1px solid;
+}
+
+.modal-button {
+  display: block;
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.filter {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.filter .filter__item + .filter__item {
+  margin-left: 8px;
+}
+
+.filter__button {
+  display: block;
+  padding: 6px 22px;
+  border-radius: 4px;
+  background-color: #f5f4fa;
+  color: #212121;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.6;
+  letter-spacing: 0.03em;
+  border: none;
+  text-decoration: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.filter__button:hover, .filter__button:focus, .filter__button:active {
+  background-color: #2196f3;
+  color: #ffffff;
+  cursor: pointer;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }/*# sourceMappingURL=main.css.map */
