--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -9,9 +9,7 @@
 }
 
 .contacts__link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include centredFlex(flex);
     padding-top: 32px;
     padding-bottom: 32px;
 
