--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -7,4 +7,29 @@
         display: flex;
         align-items: baseline;
     }
+    &__titel {
+        @extend %text;
+
+        margin-bottom: 20px;        
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+
+        color: $second-accent-color;
+    }
+    &__social {
+        margin-left: 70px;
+    }
+    &__form {
+        margin-left: auto;
+    }    
+    // .social-list & {
+    //     display: flex;
+    //     width: 206px;
+    // }    
+}
+.social-link--bcg {
+    background-color: rgba(255, 255, 255, 0.1);
 }
