--- a/sass/components/_social-link.scss
+++ b/sass/components/_social-link.scss
@@ -1,5 +1,5 @@
 .social-link {
-   @include centred;
+   @include centredFlex(flex);
     width: 100%;
     height: 100%;
 
@@ -17,7 +17,7 @@
 
     &:hover,
     &:focus {
-        background-color: #2196f3;
-        color: #ffffff;
+        background-color: $accent-color;
+        color: $second-accent-color;
     }
 }
