--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,5 +1,5 @@
-@mixin centred() {
-    display: flex;
+@mixin centredFlex($type) {
+    display: $type;
     justify-content: center;
     align-items: center;
 }
