--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -7,8 +7,7 @@
     color: $titel-text-color;
 }
 .nav {
-    display: flex;
-    align-items: center;
+    @include centredFlex(flex, null, center);
 }
 
 
