--- a/css/main.css
+++ b/css/main.css
@@ -1,24 +1,18 @@
-.filter, .address-list, .client-list, .social-list, .team-list, .do-list, .benefits-list, .contacts, .site-nav {
+.work, .filter, .address-list, .client-list, .social-list, .team-list, .do-list, .benefits-list, .contacts, .site-nav {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-.team-card__titel, .benefits-list__titel, .section-titel {
+.work-card__titel, .team-card .team-card__titel, .benefits-list__titel, .section-titel {
   margin-top: 0;
   margin-bottom: 0;
   color: #212121;
 }
 
-.footer__titel, .team-card__text, .do-list__label, .benefits-list__text {
+.work-card__text, .work-card__overlay, .footer__titel, .team-card .team-card__text, .do-list__label, .benefits-list__text {
   margin-top: 0;
   margin-bottom: 0;
-}
-
-.body {
-  background-color: #ffffff;
-  color: #757575;
-  font-family: Roboto, sans-serif;
 }
 
 .visually-hidden {
@@ -34,21 +28,23 @@
   overflow: hidden;
 }
 
+body {
+  background-color: #ffffff;
+  color: #757575;
+  font-family: Roboto, sans-serif;
+}
+
+img {
+  display: block;
+}
+
+span {
+  display: inline-block;
+}
+
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
-}
-
-.container {
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-  width: 1200px;
-}
-
-.img {
-  display: block;
 }
 
 .section-titel {
@@ -58,6 +54,14 @@
   line-height: 1.16;
   letter-spacing: 0.03em;
   text-align: center;
+}
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 1200px;
 }
 
 .logo {
@@ -101,7 +105,7 @@
   background-color: #188ce8;
 }
 
-.form__input {
+.form .form__input {
   width: 358px;
   padding: 15px 16px;
   color: rgba(255, 255, 255, 0.6);
@@ -110,13 +114,14 @@
   border-radius: 4px;
   background-color: inherit;
 }
-.form__button {
+.form .form__button {
   display: inline-flex;
   justify-content: center;
   align-items: center;
   margin-left: 12px;
   padding: 10px 28px;
 }
+
 .form__button--icon {
   margin-left: 10px;
   width: 24px;
@@ -255,12 +260,12 @@
   background-size: cover;
   background-repeat: no-repeat;
 }
-.hero__container {
+.hero .hero__container {
   display: block;
   width: 696px;
   text-align: center;
 }
-.hero__title {
+.hero .hero__title {
   display: inline-block;
   width: 100%;
   margin-top: 0;
@@ -277,9 +282,11 @@
 .benefits-list {
   display: flex;
 }
+
 .benefits-list__item {
   width: 270px;
 }
+
 .benefits-list__icon-bg {
   display: flex;
   justify-content: center;
@@ -290,6 +297,11 @@
   background-color: #f5f4fa;
   border-radius: 4px;
 }
+
+.benefits-list .benefits-list__item + .benefits-list__item {
+  margin-left: 30px;
+}
+
 .benefits-list__titel {
   margin-bottom: 10px;
   font-weight: 700;
@@ -298,14 +310,11 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
+
 .benefits-list__text {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-}
-
-.benefits-list .benefits-list__item + .benefits-list__item {
-  margin-left: 30px;
 }
 
 .do-list {
@@ -356,13 +365,13 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-.team-card__content {
+.team-card .team-card__content {
   padding-top: 30px;
   padding-right: 32px;
   padding-bottom: 30px;
   padding-left: 32px;
 }
-.team-card__titel {
+.team-card .team-card__titel {
   margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
@@ -370,7 +379,7 @@
   letter-spacing: 0.03em;
   text-align: center;
 }
-.team-card__text {
+.team-card .team-card__text {
   margin-bottom: 16px;
   font-size: 16px;
   line-height: 1.19;
@@ -382,7 +391,7 @@
   display: flex;
   justify-content: center;
 }
-.social-list__item {
+.social-list .social-list__item {
   width: 44px;
   height: 44px;
 }
@@ -402,7 +411,7 @@
   border-radius: 50px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.social-link__icon {
+.social-link .social-link__icon {
   fill: currentColor;
 }
 .social-link:hover, .social-link:focus {
@@ -413,6 +422,7 @@
 .client-list {
   display: flex;
 }
+
 .client-list__item {
   width: 170px;
   height: 92px;
@@ -447,10 +457,12 @@
   padding-bottom: 60px;
   background-color: #2f303a;
 }
+
 .footer__content {
   display: flex;
   align-items: baseline;
 }
+
 .footer__titel {
   margin-bottom: 20px;
   font-weight: 700;
@@ -460,9 +472,11 @@
   text-transform: uppercase;
   color: #ffffff;
 }
+
 .footer__social {
   margin-left: 70px;
 }
+
 .footer__form {
   margin-left: auto;
 }
@@ -519,6 +533,13 @@
 }
 .close-btn:hover, .close-btn:focus {
   fill: #2196f3;
+}
+
+.modal__button {
+  display: block;
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .form-titel {
@@ -662,6 +683,7 @@
 }
 
 .contract .underline {
+  display: inline-block;
   line-height: 0.85;
   border-bottom: 1px solid;
 }
@@ -703,4 +725,75 @@
   color: #ffffff;
   cursor: pointer;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.work {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
+.work-card {
+  width: calc((100% - 60px) / 3);
+}
+
+.work-card__link {
+  display: block;
+  text-decoration: none;
+  transition: box-shadow cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+}
+.work-card__link:hover, .work-card__link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  outline: transparent;
+  transform: translateY(0);
+}
+
+.work-card__box {
+  position: relative;
+  overflow: hidden;
+}
+
+.work-card__overlay {
+  position: absolute;
+  top: 0;
+  padding: 63px 24px;
+  height: 100%;
+  font-size: 18px;
+  line-height: 1.55;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  background: rgba(33, 150, 243, 0.9);
+  transform: translateY(calc(100% + 1px));
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.work-card__link:hover .work-card__overlay,
+.work-card__link:focus .work-card__overlay {
+  transform: translateY(0);
+}
+
+.work-card__titel {
+  margin-bottom: 4px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  text-decoration: none;
+}
+
+.work-card__text {
+  color: #757575;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.03em;
+}
+
+.border {
+  padding-top: 20px;
+  padding-right: 24px;
+  padding-bottom: 20px;
+  padding-left: 24px;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
 }/*# sourceMappingURL=main.css.map */
