--- a/sass/components/_client-link.scss
+++ b/sass/components/_client-link.scss
@@ -1,5 +1,5 @@
 .client-link {
-    @include centredFlex(flex);
+    @include centredFlex(flex, center, center);
 
     width: 100%;
     height: 100%;
