--- a/sass/components/_client-list.scss
+++ b/sass/components/_client-list.scss
@@ -1,11 +1,10 @@
 .client-list {
     @extend %list;
-    display: flex;
-
-    &__item {
-        width: 170px;
-        height: 92px;
-    }
+    display: flex;    
+}
+.client-list__item {
+    width: 170px;
+    height: 92px;
 }
 
 .client-list .client-list__item + .client-list__item {
