--- a/sass/components/_do-list.scss
+++ b/sass/components/_do-list.scss
@@ -10,7 +10,7 @@
         @extend %text;
         position: absolute;
         bottom: 0;
-        @include centredFlex(flex);
+        @include centredFlex(flex, center, center);
         width: 100%;
         height: 70px;
         margin-top: 0;
