--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,7 +1,7 @@
 .logo {
     color: $titel-text-color;
 
-    font-family: Raleway, sans-serif;
+    font-family: $second-font-family;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
