--- a/sass/components/_mailing-form.scss
+++ b/sass/components/_mailing-form.scss
@@ -1,5 +1,5 @@
 .form {
-    &__input {
+    .form__input {
         width: 358px;
         padding: 15px 16px;
         
@@ -11,16 +11,15 @@
 
         background-color: inherit;
     }
-    &__button {
-        @include centredFlex(inline-flex);
+    .form__button {
+        @include centredFlex(inline-flex, center, center);
         
         margin-left: 12px;
-        padding: 10px 28px;
-
-        &--icon {
-            margin-left: 10px;
-            width: 24px;
-            height: 24px;
-        }
+        padding: 10px 28px;        
     }
+}
+.form__button--icon {
+    margin-left: 10px;
+    width: 24px;
+    height: 24px;
 }
