--- a/sass/components/_social-link.scss
+++ b/sass/components/_social-link.scss
@@ -1,5 +1,5 @@
 .social-link {
-   @include centredFlex(flex);
+   @include centredFlex(flex, center, center);
     width: 100%;
     height: 100%;
 
@@ -11,7 +11,7 @@
     transition: color $prime-transition-timing-function $prime-animation,
     background-color $prime-transition-timing-function $prime-animation;
 
-    &__icon {
+    .social-link__icon {
         fill: currentColor;
     }
 
