--- a/sass/components/_team-card.scss
+++ b/sass/components/_team-card.scss
@@ -2,13 +2,13 @@
     background-color: $primery-bcg-color;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-    &__content {
+    .team-card__content {
         padding-top: 30px;
         padding-right: 32px;
         padding-bottom: 30px;
         padding-left: 32px;
     }
-    &__titel {
+    .team-card__titel {
         @extend %titel;
         margin-bottom: 10px;
         font-weight: 500;
@@ -17,7 +17,7 @@
         letter-spacing: 0.03em;
         text-align: center;
     }
-    &__text {
+    .team-card__text {
         @extend %text;
         margin-bottom: 16px;
         font-size: 16px;
