--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,5 +1,5 @@
-@mixin centredFlex($type) {
-    display: $type;
-    justify-content: center;
-    align-items: center;
+@mixin centredFlex($disp, $just-con, $ali-it) {
+    display: $disp;
+    justify-content: $just-con;
+    align-items: $ali-it;
 }
