--- a/css/main.css
+++ b/css/main.css
@@ -491,7 +491,7 @@ span {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-.address-list__item :not(last-child) {
+.address-list__item:not(:last-child) {
   margin-bottom: 9px;
 }
 
