--- a/sass/components/_mailing-form.scss
+++ b/sass/components/_mailing-form.scss
@@ -1,4 +1,5 @@
 .form {
+    @include centredFlex(flex, null, null);
     .form__input {
         width: 358px;
         padding: 15px 16px;
@@ -12,7 +13,7 @@
         background-color: inherit;
     }
     .form__button {
-        @include centredFlex(inline-flex, center, center);
+        @include centredFlex(flex, center, center);
         
         margin-left: 12px;
         padding: 10px 28px;        
